# massifg

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
data/: massifg.desktop  massifg.glade  menu.ui
docs/reference/: .gitignore  Makefile.am  massifg-docs.xml.in  massifg-sections.txt
src/: massifg.c  massifg.h  massifg_application.c  massifg_application.h  massifg_graph.c  massifg_graph.h  massifg_graph_private.h  massifg_gtkui.c  massifg_gtkui.h  massifg_parser.c  massifg_parser.h  massifg_parser_private.h  massifg_utils.c  massifg_utils.h
tests/: application.c  common.c  common.h  graph.c  massif-output-2snapshots.txt  massif-output-broken-800.txt  massif-output-glom-shortened.txt  massif-output-glom.txt  parser.c  utils.c
ui/: massifg.glade  menu.ui
